材料管理中的小bug修改

--- a/static/app/basic/material.html
+++ b/static/app/basic/material.html
@@ -162,10 +162,9 @@
         <tr>
             <th>材料名称</th>
             <th>类型</th>
-            <th>材料编码</th>
-
             <th>材料状态</th>
             <th>耗材人ID</th>
+            <th>材料人姓名</th>
             <th>创建日期</th>
             <th>过期日期</th>
         </tr>
