字段名字修改

--- a/static/app/basic/device.html
+++ b/static/app/basic/device.html
@@ -28,7 +28,7 @@
                             </tr>
                             <tr>
                                 <th>设备总共使用次数</th>
-                                <td><input type="number" class="form-control " name="surplus" value=""></td>
+                                <td><input type="number" class="form-control " name="countNum" value=""></td>
                             </tr>
                             <tr>
                                 <th>设备最后使用期限</th>
@@ -86,7 +86,7 @@
                             </tr>
                             <tr>
                                 <th>设备总共使用次数</th>
-                                <td><input type="number" class="form-control " name="surplus" value=""></td>
+                                <td><input type="number" class="form-control " name="countNum" value=""></td>
                             </tr>
                             <tr>
                                 <th>设备最后使用期限</th>
@@ -179,7 +179,7 @@
                 {data: "cpu"},
                 {data: "deviceStatus", replaceFn: 'getStatusValue2'},
                 {data: "isRepair", replaceFn: 'getRepairCheck2'},
-                {data: "surplus"},
+                {data: "countNum"},
                 {data: "expiryDate"}
             ],
             options: [//操作区域(id)
