--- a/static/app/basic/material.html
+++ b/static/app/basic/material.html
@@ -231,12 +231,23 @@
             autoclose: 1,
         });
 
-        var date = new Date();
-        date = Shinez.FormateDate(date, "yyyy-MM-dd");
-        $("input[name=expiryDate]").val(date);
-        $('.form_datetime').datepicker('update');
+        getDateTimeFormat()
         loadTypes();
     });
+
+    function getDateTimeFormat(){
+        var date = new Date();
+        //date = Shinez.FormateDate(date, "yyyy-MM-dd");
+        let year=date.getFullYear()+2;
+        let month=date.getMonth()+1;
+        let dates=date.getDate();
+        year>10?year:'0'+year;
+        month>10?month:'0'+month;
+        dates>10?dates:'0'+dates;
+        date=year+'-'+month+'-'+dates
+        $("input[name=expiryDate]").val(date);
+        $('.form_datetime').datepicker('update');
+    }
 
     function btnSave(args){
         var sId=$(args).find('input[name=idCode]').val()
@@ -262,7 +273,7 @@
 
     }
     function toType(e) {
-        e.preventDefault()
+        //e.preventDefault()
         loadHtml("/basic/material_type");
     }
     //材料状态的转换
